Starbucks, Fixing the overflow on Hero Section.

--- a/src/sass/_banner.scss
+++ b/src/sass/_banner.scss
@@ -1,7 +1,7 @@
-.promotion {
+.banner {
   width: 100%;
   height: 100%;
-  background-color: $promotion-bg;
+  background-color: $starbucks-color;
   display: flex;
   justify-content: center;
 
@@ -10,7 +10,7 @@
     max-width: 1360px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-areas: "description images";
+    grid-template-areas: "images description";
     grid-gap: 2rem;
     padding: 2rem 8rem;
 
@@ -20,10 +20,15 @@
     }
   }
 
+  &__img {
+    width: 90%;
+    grid-area: images;
+  }
+
   &__description {
     display: flex;
-    align-content: center;
     flex-wrap: wrap;
+    align-content: center;
     grid-area: description;
 
     @include rwd(medium) {
@@ -36,6 +41,7 @@
   &__subtitle {
     text-transform: uppercase;
     padding-bottom: 3rem;
+    color: white;
 
     @include rwd(medium) {
       font-size: calc(1.3rem + 1vw);
@@ -43,13 +49,14 @@
   }
 
   &__paragraph {
+    padding-bottom: 3rem;
+    color: white;
     font: {
       family: $promotion-font;
       style: italic;
       weight: 400;
       size: 1.7rem;
     }
-    padding-bottom: 3rem;
 
     @include rwd(medium) {
       font-size: calc(1.3rem + 0.5vw);
@@ -57,8 +64,8 @@
   }
 
   &__link {
-    color: black;
-    border-bottom: 1px dotted black;
+    color: white;
+    border-bottom: 1px dotted white;
     margin-bottom: 1px;
     font: {
       size: 1.7rem;
@@ -73,11 +80,5 @@
 
   &__icon {
     font-size: 1.2rem;
-  }
-
-  &__img {
-    width: fit-content;
-    max-width: 100%;
-    grid-area: images;
   }
 }
