--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,13 +1,13 @@
 //vars
 $main-font: "Lato", sans-serif;
 $promotion-font: "Crete Round", Georgia, "Times New Roman", serif;
-$starbucks-color: #006240;
+$starbucks-color: #006944;
 $font-color: #3d3936;
 $promotion-bg: #fdf4ea;
 
 //Responsive Variables.
 $breakpoints: (
-  small: 0px,
+  small: 320px,
   medium: 800px,
   large: 1024px,
   xlarge: 1200px,
