--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   display: flex;
   justify-content: center;
-  width: auto;
+  overflow: hidden;
 
   @include rwd(medium) {
     width: 100%;
